@@ -1,3 +1,3 @@
 module RailsWizard
-  VERSION = "3.1.5"
+  VERSION = "3.1.6"
 end
